--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "force": "^0.0.3",
+    "ngx-drag-drop": "^18.0.2",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.14.1",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
